Create RedBlackTree class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ src/Array.cpp
 src/Strings.cpp
 src/DoublyLinkedList.cpp
 src/MaxHeap.cpp
+src/RedBlackTree.cpp
 src/util/Clock.cpp)
 
 set(TARGET_NAME
