Add time benchmark functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ src/Strings.cpp
 src/DoublyLinkedList.cpp
 src/MaxHeap.cpp
 src/RedBlackTree.cpp
-src/util/Clock.cpp)
+src/util/Clock.cpp
+src/util/Benchmark.cpp)
 
 set(TARGET_NAME
 sdizo)
